# AIMakerspace9

./: .gitignore
06_Agent_Memory/Multi-Agent_Wellness_System_with_Shared_Memory/: .env.example  .gitignore  README.md  dashboard.py  demo.py  pyproject.toml  run_all_tests.py  run_real_game_system.py  test_cross_agent.py  test_dashboard.py  test_health_check.py  test_real_system.py  test_specialist_agents.py
06_Agent_Memory/Multi-Agent_Wellness_System_with_Shared_Memory/docs/: ARCHITECTURE.md
06_Agent_Memory/Multi-Agent_Wellness_System_with_Shared_Memory/src/: __init__.py  cross_agent_learning.py  game_router.py  game_specialist_agents.py  memory_manager.py  memory_namespaces.py  router.py  specialist_agents.py  wellness_system.py
06_Agent_Memory/Multi-Agent_Wellness_System_with_Shared_Memory/tests/: test_memory_cleanup.py  test_memory_conflict_resolution.py  test_memory_importance_scoring.py  test_scenarios.py  test_video_game_agent_integration.py
07_Deep_Agents/ai_life_coach/: .env.example  .gitignore  API_REFERENCE.md  ARCHITECTURAL_DECISIONS.md  ARCHITECTURE.md  BEAD_13_COMPLETION_REPORT.md  BEAD_17_SUMMARY.md  BEAD_18_IMPLEMENTATION_REPORT.md  BEAD_22_COMPLETION_REPORT.md  BEAD_23_COMPLETION_REPORT.md  BEAD_26_COMPLETION_REPORT.md  BEAD_27_COMPLETION_REPORT.md  BEAD_28_COMPLETION_REPORT.md  BEAD_33_COMPLETION_REPORT.md  BEAD_34_INTEGRATION_TEST_REPORT.md  BEAD_35_PERFORMANCE_OPTIMIZATION_REPORT.md  BEAD_38_COMPLETION_REPORT.md  BEAD_4_COMPLETION_REPORT.md  BEAD_5_COMPLETION_REPORT.md  BEAD_6_COMPLETION_REPORT.md  BEAD_7_COMPLETION_REPORT.md  BEAD_9_IMPLEMENTATION_REPORT.md  Bead10_Implementation_Report.md  Bead20_Implementation_Report.md  Bead_21_Report.md  Beads_Plan.md  CLEANUP_SUMMARY.md  CLI_README.md  DEVELOPER.md  DOCUMENTATION_REPORT.md  DOCUMENTATION_SUMMARY.md  EXAMPLE_SESSIONS.md  EXTENSION_GUIDE.md  FAQ.md  FEATURES.md  FINAL_SUMMARY.md  FINANCE_COACH_IMPLEMENTATION_REPORT.md  INSTALLATION.md  PRESENTATION.md  PROJECT_COMPLETION_REPORT.md  (+52 more)
07_Deep_Agents/ai_life_coach/demos/: __init__.py  demo_all_specialists.py  demo_career_specialist.py  demo_finance_specialist.py  demo_relationship_specialist.py  demo_wellness_specialist.py
07_Deep_Agents/ai_life_coach/docs/: MEMORY_SYSTEM.md  README.md  bead_17_completion_report.md  coordinator_system.md  subagent_coordination_workflow.md  tool_allocation_strategy.md
07_Deep_Agents/ai_life_coach/docs/performance/: OPTIMIZATION_GUIDE.md
07_Deep_Agents/ai_life_coach/examples/: demo_goal_dependencies.py
07_Deep_Agents/ai_life_coach/skills/career-assessment/: SKILL.md
07_Deep_Agents/ai_life_coach/skills/financial-planning/: SKILL.md
07_Deep_Agents/ai_life_coach/skills/relationship-building/: SKILL.md
07_Deep_Agents/ai_life_coach/skills/wellness-optimization/: SKILL.md
07_Deep_Agents/ai_life_coach/src/: __init__.py  config.py  main.py  memory.py
07_Deep_Agents/ai_life_coach/src/agents/: __init__.py  coordinator.py  specialists.py
07_Deep_Agents/ai_life_coach/src/performance/: __init__.py  cache.py  integration.py  memory_optimizer.py  parallel.py  profiler.py  tool_optimizer.py
07_Deep_Agents/ai_life_coach/src/tools/: __init__.py  adaptive_tools.py  assessment_tools.py  career_tools.py  checkin_tools.py  communication_tools.py  context_tools.py  cross_domain_tools.py  dashboard_tools.py  emergency_tools.py  finance_tools.py  goal_dependency_tools.py  (+12 more)
07_Deep_Agents/ai_life_coach/tests/: TEST_SCENARIOS.md  __init__.py  comprehensive_test_scenarios.py  conftest.py  test_adaptive_tools.py  test_assessment_integration.py  test_assessment_tools.py  test_career_tools.py  test_checkin_tools.py  test_communication_tools.py  test_context_tools.py  test_coordinator.py  test_cross_domain_simple.py  test_dashboard_tools.py  test_emergency_tools.py  test_finance_tools.py  test_full_coordinator.py  test_goal_dependency_tools.py  test_habit_tools.py  test_integration_tools.py  test_memory.py  test_memory_tools.py  test_mood_tools.py  test_phase_planning_tools.py  test_planning_tools.py  test_reflection_tools.py  test_relationship_tools.py  test_resource_tools.py  test_setup.py  test_specialist_agents.py  test_specialists.py  test_user_tools.py  test_viz_tools.py  test_wellness_tools.py
08_Open_DeepResearch/: LMSTUDIO_COMPATIBILITY_FIX.md  open-deep-research.py  pyproject.toml
08_Open_DeepResearch/open_deep_library/: configuration.py  deep_researcher.py  prompts.py  utils.py
(+84 files in other folders)
