[project]
name = "multi-agent-wellness-system"
version = "0.1.0"
description = "Multi-Agent Wellness System with Shared Memory using LangGraph"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "langgraph",
    "langchain-core",
    "langchain-openai",
    "langchain-community",
    "streamlit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"